--- a/img/Document_files/style.css
+++ b/img/Document_files/style.css
@@ -17,6 +17,7 @@ nav{
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    display: none;
 }
 
 .nav-left{
@@ -25,7 +26,12 @@ nav{
 #active:checked ~ .toggle{
     clip-path: circle(75%);
 }
-
+.toggle{
+    cursor: pointer;
+    background-color: linear-gradient(-135deg, #c850c0, #4158d8);
+    z-index: 2;
+    transition: all 0.3s ease-in-out;
+}
 
 
 .nav-left h1{
@@ -47,55 +53,63 @@ nav{
     margin-left: 20px;
 }
 
-/* SIDEBAR */
-.toggle{
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    cursor: pointer;
-}
 
-.overlay{
-    height: 100%;
-    width: 0;
+/* sidebar */
+.sidebar{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: greenyellow;
-    overflow-x: hidden;
-    transition: 0.6s;
-    z-index: 2;
-}
-.overlay-content{
-    position: relative;
-    top: 25%;
     width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    height: 100%;
+    background: linear-gradient(-215deg, #c850c0, #4158d8);
+    clip-path: circle(25px at calc(10% - 45px) 45px);
 }
-.overlay-content a{
-    padding: 8px;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.4s;
-    width: 200px;
-    margin: 0 auto;
+.menu-btn{
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    z-index: 3;
+    text-align: center;
+    line-height: 50px;
+}
+.sidebar ul{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.sidebar ul li{
+    margin: 15px 0;
+}
+.sidebar ul li a{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+    padding: 5px 50px;
+    position: relative;
+    line-height: 50px;
+    transition: all 0.3s ease;
+}
+.sidebar ul li a::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    border-radius: 350px;
+    transform: scaleY(0);
+    z-index: -1;
+    transition: transform 0.3s ease;
+}
+.sidebar ul li a:hover::after{
+    transform: scaleY(1);
+}
+.sidebar ul li a:hover{
+    color: #c850c0;
 }
 
-.overlay .closebtn{
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-.closebtn{
-    color: #818181;
-}
-.closebtn:hover{
-    background-color: transparent!important;
-    color: white!important;
-}
 
 
 /* HEADER */
@@ -112,8 +126,6 @@ header h1{
     color: white;
     backdrop-filter : brightness(50%);
 }
-
-
 
 /* MAIN */
 main h1{
